--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "playwright-test",
+  "name": "playwright-typescript",
   "version": "1.0.0",
-  "description": "Example test automation",
-  "main": "index.js",
+  "author": "Kamil",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "scripts": {
-    "clean": "rm -rf node_modules",
-    "reinstall": "npm run clean && npm install",
-    "test": "jest",
-    "test.watch": "jest --watchAll"
+    "help": "playwright --help",
+    "test": "npx playwright test",
+    "open:webkit": "node browsers/webkit.js",
+    "test:spec": "npx playwright test medlink-demands.spec.ts",
+    "codegen": "npx playwright codegen <url here>"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "jest": "^26.6.3",
-    "jest-playwright-preset": "^1.4.7",
-    "playwright": "^1.9.1",
-    "ts-jest": "^26.5.3",
-    "typescript": "^4.2.3"
+    "@playwright/test": "^1.25.1",
+    "prettier": "2.7.1"
   }
 }
